revises the disclosure tab of the blog view’s predicate drawer; uses .borderInset(Edge) from monoSnippets instead of duplicate lines; revises the page footer; fixes a transition whitespace bug

--- a/frontend/ui/arboreal.style.less
+++ b/frontend/ui/arboreal.style.less
@@ -579,24 +579,24 @@
 	body > footer {
 	
 		.uaDisableTextZoom;
+		
+		.fullInset(auto, 0px, 0px, 0px);	
+		.width(100%);
+		padding: 0;
 	
-		margin-top: -1px;
-		border-top: 1px solid rgba(255, 255, 255, .65);
+		background: @arborealFooterBackdrop;
+		
+		.borderInsetTop(rgba(255, 255, 255, .65));
 
 		.text(14px, @pack, rgb(38, 38, 38));
 
 		text-shadow: 	rgba(255, 255, 255, .2) 0px 1px 0px,
 				rgba(0, 0, 0, .15) 0px -1px 0px,
 				rgba(255, 255, 255, .2) 0px 0px 1px;
-	
-		.fullInset(auto, 0px, 0px, 0px);	
-		.width(100%);
 
-		padding: 0;
-		background: @arborealFooterBackdrop;
-		
 		white-space: nowrap;
 		
+				
 		:before {
 		
 			.shadowDownBlock(2px);
@@ -1442,6 +1442,10 @@
 
 		margin-top: 4 * @slice;		
 		margin-bottom: 1.5 * @pack;
+		
+		.boxShadow(rgba(255, 255, 255, .5), 0px, 0px, 9px);
+		
+	//	Shadows
 				
 		:before, :after {
 		
@@ -1453,19 +1457,19 @@
 		:before {
 			
 			.fullInset(0, 0, auto, 0);
-			margin-top: -1px;
-			border-top: 1px solid rgba(0, 0, 0, .2);
+			.borderInsetTop(rgba(0, 0, 0, .2));
 		
 		}
 		
 		:after {
 		
-			.pseudoBlock;
 			.fullInset(auto, 0, 0, 0);
-			margin-bottom: -1px;
-			border-bottom: 1px solid rgba(255, 255, 255, .45);
+			.borderInsetBottom(rgba(255, 255, 255, .45));
 		
 		}
+	
+	
+	//	The disclosure tab
 	
 		.tab {
 		
@@ -1496,6 +1500,10 @@
 			
 			z-index: 1024;
 			
+			.transition2(.250s, padding-top, margin-top);
+		
+			background: url(arboreal.article.blogPosts.predicate.toggle.png) center bottom no-repeat;
+				
 			span {
 			
 				display: block;
@@ -1503,9 +1511,35 @@
 				overflow-x: hidden;
 				text-indent: 2 * @pack;
 			
+				background: url(arboreal.article.blogPosts.predicate.toggle.glyph.png) center no-repeat;
+				
+				:hover {
+			
+					background: url(arboreal.article.blogPosts.predicate.toggle.glyph.hover.png) center no-repeat;
+			
+				}
+				
 			}
 	
 		}
+		
+		.tab.active {
+		
+			padding-top: (2 * @slice) !important;
+			margin-top: (-2 * @slice) !important;
+			
+			background: url(arboreal.article.blogPosts.predicate.toggle.active.png) center bottom no-repeat;
+				
+			span {
+			
+				background: url(arboreal.article.blogPosts.predicate.toggle.active.glyph.png) center no-repeat;
+			
+			}
+		
+		}
+		
+		
+	//	Content wrapper
 		
 		> div {
 	
@@ -1520,6 +1554,9 @@
 			margin-right: auto;
 		
 		}
+	
+	
+	//	Actual content
 		
 		section {
 		
@@ -1789,50 +1826,6 @@
 	
 	}
 	
-	.tab {
-		
-		.transition2(.250s, padding-top, margin-top);
-	
-	}
-	
-	.tab.fastAnimation {
-	
-		.transition(0s);
-	
-	}
-	
-	.tab {
-	
-		background: url(arboreal.article.blogPosts.predicate.toggle.png) center bottom no-repeat;
-			
-		span {
-		
-			background: url(arboreal.article.blogPosts.predicate.toggle.glyph.png) center no-repeat;
-			
-			:hover {
-		
-				background: url(arboreal.article.blogPosts.predicate.toggle.glyph.hover.png) center no-repeat;
-		
-			}
-			
-		}
-	
-	}
-	
-	.tab.active {
-	
-		padding-top: (2 * @slice) !important;
-		margin-top: (-2 * @slice) !important;
-		
-		background: url(arboreal.article.blogPosts.predicate.toggle.active.png) center bottom no-repeat;
-			
-		span {
-		
-			background: url(arboreal.article.blogPosts.predicate.toggle.active.glyph.png) center no-repeat;
-		
-		}
-	
-	}
 	
 	#blogNavigation.active {
 	
@@ -1842,9 +1835,7 @@
 	
 			.shadowDownBlock(4px);
 			.fullInset(0, 0, auto, 0);
-			position: absolute;
-			margin-top: -1px;
-			border-top: 1px solid rgba(255, 255, 255, .65);
+			.borderInsetTop(rgba(255, 255, 255, .65));
 		
 		}
 		
@@ -1852,9 +1843,7 @@
 		
 			.shadowUpBlock(4px);
 			.fullInset(auto, 0, 0, 0);
-			position: absolute;
-			margin-bottom: -1px;
-			border-bottom: 1px solid rgba(255, 255, 255, .65);
+			.borderInsetBottom(rgba(255, 255, 255, .65));
 		
 		}
 	
@@ -2116,10 +2105,9 @@
 	
 			.pseudoBlock;
 			.fullInset(0, 0, auto, 0);
-			margin-top: -1px;
-			border-top: 1px solid rgba(255, 255, 255, .45);
-			border-bottom: 1px solid rgba(0, 0, 0, .2);
-			margin-bottom: -1px;
+
+			.borderInsetTop(rgba(255, 255, 255, .45));
+			.borderInsetBottom(rgba(0, 0, 0, .2));
 			
 			z-index: 1024 + 512;
 		
@@ -2129,40 +2117,51 @@
 		
 			.pseudoBlock;
 			.fullInset(auto, 0, 0, 0);
-			margin-top: -1px;
-			border-top: 1px solid rgba(0, 0, 0, .2);
-			border-bottom: 1px solid rgba(255, 255, 255, .45);
-			margin-bottom: -1px;
+			
+			.borderInsetTop(rgba(0, 0, 0, .2));
+			.borderInsetBottom(rgba(255, 255, 255, .45));
 		
 		}
 		
 		ul {
+		
+			:before, :after {
+			
+				position: absolute;
+			
+			}
 				
 			:before {
 			
 				.pseudoBlock;
-				.fullInset(-18px, 0, 0, 0);
+				.borderInsetTop(rgba(255, 255, 255, .85));
+				
 				width: 100%;
 				.shadowDownBlock(4px);
-				position: absolute;
+				
+				.fullInset(-1, 0, 0, 0);
+				
+				top: 3px;
 				
 				z-index: 64;
+				
+				position: absolute;
 			
 			}
 			
 			:after {
 			
 				.pseudoBlock;
+				.size(50%, 100%);
+				
 				background-color: rgb(196, 205, 206);
 				
 				z-index: 0;
 				
-				height: 100%;
 				margin-right: 2.5 * @pack;
-				position: absolute;
+				
 				right: 50%;
 				top: 0%;
-				width: 50%;
 				
 				.boxShadow2(rgba(0, 0, 0, .15), 1px, 0px, 0px, rgba(0, 0, 0, .35), 0px, 3px, 3px);
 				border-right: 1px solid rgba(255, 255, 255, .20);
@@ -2290,13 +2289,12 @@
 					
 					}
 					
+					.textStroke;
+					color: rgb(81, 91, 92);
 					font-weight: bold;
 					
-					color: rgb(81, 91, 92);
 					text-shadow:	rgba(255, 255, 255, .65) 0px 1px 0px,
 							rgba(0, 0, 0, .15) 0px -1px 0px;
-							
-					.textStroke;
 				
 				}
 			
@@ -2325,8 +2323,8 @@
 			position: absolute;
 			
 			bottom: -1 * @pack;
-			height: @pack;
-			
+
+			.size(100%, @pack);
 			.width(100%);
 			
 			text-align: center;
@@ -2466,7 +2464,6 @@
 				> * {
 				
 					display: block;
-					
 				
 				}
 				
@@ -2485,8 +2482,7 @@
 					
 					opacity: 0;
 					
-					.transition(.12
-					5s);
+					.transition(.125s);
 					.animation(arborealTagCircularMotionAnimation, 2.5s, infinite);
 				
 				}
@@ -2557,9 +2553,7 @@
 				
 			//	Active Highlight	
 				
-				input:active,
-				input:focus,
-				button:focus {
+				input:active, input:focus, button:focus {
 				
 					background-color: rgba(255, 255, 255, .125);
 					.boxShadow(rgba(255, 255, 255, .5), 0px, 0px, 6px);
@@ -2588,7 +2582,6 @@
 					padding: @slice;
 					
 					.gradientBackdropVertical(rgb(217, 212, 148), rgb(230, 224, 157));
-					
 					
 					.boxShadow2(rgba(0, 0, 0, .2), 0px, -1px, 0px, rgba(255, 255, 255, .7), 0px, 1px, 0px);
 					
@@ -2728,8 +2721,8 @@
 	.storeMessage {
 	
 		position: fixed;
-		height: @arborealNavigationBarHeight;
-		.width(7.5 * @pack);
+		.size(7.5 * @pack, @arborealNavigationBarHeight);
+
 		top: 0;
 		left: 50%;
 		margin-left: -1 * @pack;
@@ -2773,7 +2766,6 @@
 	.storeShelf {
 	
 		background: url(arboreal.shelf.backdrop.png) top center repeat-y;
-	
 		text-align: center;
 	
 		li {
